#5 refresh token, move scope to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spotify.api.client.id=${SPOTIFY_API_CLIENT_ID}
 spotify.api.client.secret=${SPOTIFY_API_CLIENT_SECRET}
+spotify.api.client.scope=playlist-read-private playlist-read-collaborative ugc-image-upload user-follow-read playlist-modify-private user-read-email user-read-private streaming app-remote-control user-modify-playback-state user-follow-modify user-library-read user-library-modify playlist-modify-public user-read-playback-state user-read-currently-playing user-read-recently-played user-read-playback-position user-top-read
 
