--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,16 @@ spring.security.oauth2.client.provider.spotify-provider.user-info-uri=https://ap
 spring.security.oauth2.client.provider.spotify-provider.user-name-attribute=id
 
 spring.jackson.property-naming-strategy=SNAKE_CASE
+
+spring.datasource.url=jdbc:h2:file:./data/spotifydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=partyuser
+spring.datasource.password=partypass
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+spring.jpa.defer-datasource-initialization=true
