#37 jakiś bliżej nieokreślony stan :)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,15 @@ spring.security.oauth2.client.provider.spotify-provider.authorization-uri=https:
 spring.security.oauth2.client.provider.spotify-provider.token-uri=https://accounts.spotify.com/api/token
 spring.security.oauth2.client.provider.spotify-provider.user-info-uri=https://api.spotify.com/v1/me
 spring.security.oauth2.client.provider.spotify-provider.user-name-attribute=id
+spring.security.oauth2.client.provider.spotify-provider.user-info-authentication-method=header
 
 spring.datasource.url=jdbc:h2:file:./data/spotifydb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=partyuser
 spring.datasource.password=partypass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.main.allow-bean-definition-overriding=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
